--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
-
+  <head>
+  <script async defer data-domain="thatwebsite.xyz" src="https://t.dcpri.me/js/plausible.js"></script>
+</head>
 <body>
 
 <i>nothing yet!</i>
+  
+  
 
 </body>
 </html>
