--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <script async defer data-domain="thatwebsite.xyz" src="https://t.dcpri.me/js/plausible.js"></script>
 </head>
 <body>
-
-<i>nothing yet!</i>
-  
-  
-
+  <b>Projects</b>
+  <ul>
+    <li><a href="https://that-ssl-checker.thatwebsite.xyz">That SSL Checker</a></li>
+  </ul>
 </body>
 </html>
