--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
-<!doctype html>
-<html>
-  <head>
-  <script async defer data-domain="thatwebsite.xyz" src="https://t.dcpri.me/js/plausible.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ThatWebsite</title>
+    <script defer data-domain="thatwebsite.xyz" src="https://analytics.thatwebsite.xyz/js/script.js"></script>
+    <style>
+        body {
+            max-width: 768px;
+            margin: 4rem auto;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background: #eee;
+            color: #222;
+        }
+
+        a {
+            color: inherit;
+        }
+
+        a:hover {
+            text-decoration: none;
+        }
+
+        @media(prefers-color-scheme:dark) {
+            html {
+                scrollbar-color: #6c6c6c #2e2e2e
+            }
+
+            body {
+                color: #ebebeb;
+                background: #222;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+            }
+
+        }
+    </style>
 </head>
+
 <body>
-  <b>Projects</b>
-  <ul>
-    <li><a href="https://that-ssl-checker.thatwebsite.xyz">That SSL Checker</a></li>
-  </ul>
+    <h1>ThatWebsite Projects</h1>
+    <ul>
+        <li><a href="https://that-ssl-checker.thatwebsite.xyz">That SSL Checker</a></li>
+        <li><a href="https://thatdns.xyz">ThatDNS</a></li>
+    </ul>
+
 </body>
+
 </html>
